[package]
name = "ppmc"
version = "0.1.0"
description = "PDF presenter with mobile console"
authors = ["Nyayuta"]
edition = "2021"

[lib]
name = "ppmc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
pdfium-render = "0.9.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.7.1"
